--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: An-index-to-the-collected-works-of-William-Hazlitt_72232
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72232-h/images/cover.jpg
 creator:
   author:
     agent_name: Hazlitt, William
@@ -22,6 +25,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/956
     wikipedia: https://en.wikipedia.org/wiki/Alfred_Rayney_Waller
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72232#An-index-to-the-collected-works-of-William-Hazlitt
 gutenberg_issued: '2023-11-26'
 identifiers:
   gutenberg: '72232'
